--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <p class="description">
     Это не публичная комната — это закрытый покерный клуб в Кыргызстане.  
     Ежедневные игры в спокойной и сосредоточенной атмосфере.  
-    Полная анонимность и полный контроль над вашей игрой.
+    Полная анонимность.
   </p>
 
   <div class="features">
